Cleanup initial control notebooks

--- a/notebooks/nb_40_MPCToAlphaZero.ipynb
+++ b/notebooks/nb_40_MPCToAlphaZero.ipynb
@@ -4,41 +4,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hide_input": true,
-    "init_cell": true,
     "slideshow": {
      "slide_type": "skip"
-    },
-    "tags": [
-     "remove-input",
-     "remove-output",
-     "remove-input-nbconv",
-     "remove-output-nbconv"
-    ]
+    }
    },
    "outputs": [],
    "source": [
     "%%capture\n",
-    "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "%matplotlib inline\n",
-    "%load_ext training_rl"
+    "%load_ext training_rl\n",
+    "%set_random_seed 12"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hide_input": true,
-    "init_cell": true,
     "slideshow": {
      "slide_type": "skip"
-    },
-    "tags": [
-     "remove-input",
-     "remove-input-nbconv"
-    ]
+    }
    },
    "outputs": [],
    "source": [
@@ -49,42 +35,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hide_input": true,
-    "init_cell": true,
     "slideshow": {
      "slide_type": "skip"
-    },
-    "tags": [
-     "remove-input",
-     "remove-output",
-     "remove-input-nbconv",
-     "remove-output-nbconv"
-    ]
+    }
    },
    "outputs": [],
    "source": [
-    "%%capture\n",
-    "\n",
-    "%set_random_seed 12"
+    "%load_latex_macros"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hide_input": true,
-    "init_cell": true,
     "slideshow": {
      "slide_type": "skip"
-    },
-    "tags": [
-     "remove-input-nbconv",
-     "remove-cell"
-    ]
+    }
    },
    "outputs": [],
    "source": [
-    "%load_latex_macros"
+    "%autoreload"
    ]
   },
   {
@@ -96,7 +66,7 @@
    },
    "source": [
     "<img src=\"_static/images/aai-institute-cover.svg\" alt=\"Snow\" style=\"width:100%;\">\n",
-    "<div class=\"md-slide title\">Include title and greeting with divs</div>"
+    "<div class=\"md-slide title\">From MPC to AlphaZero</div>"
    ]
   },
   {
@@ -146,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.11.3"
   },
   "rise": {
    "footer": "<img src='_static/images/aai-logo.png' alt='logo' height='50em'>",
