--- a/notebooks/nb_30_ControlAndPlanning.ipynb
+++ b/notebooks/nb_30_ControlAndPlanning.ipynb
@@ -29,32 +29,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "%%capture\n",
-    "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "%matplotlib inline\n",
-    "%load_ext training_rl"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "%load_ext training_rl\n",
+    "%set_random_seed 12"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hide_input": true,
-    "init_cell": true,
     "slideshow": {
      "slide_type": "skip"
-    },
-    "tags": [
-     "remove-input",
-     "remove-input-nbconv"
-    ]
+    }
    },
    "outputs": [],
    "source": [
@@ -65,42 +61,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hide_input": true,
-    "init_cell": true,
     "slideshow": {
      "slide_type": "skip"
-    },
-    "tags": [
-     "remove-input",
-     "remove-output",
-     "remove-input-nbconv",
-     "remove-output-nbconv"
-    ]
+    }
    },
    "outputs": [],
    "source": [
-    "%%capture\n",
-    "\n",
-    "%set_random_seed 12"
+    "%load_latex_macros"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hide_input": true,
-    "init_cell": true,
     "slideshow": {
      "slide_type": "skip"
-    },
-    "tags": [
-     "remove-input-nbconv",
-     "remove-cell"
-    ]
+    }
    },
    "outputs": [],
    "source": [
-    "%load_latex_macros"
+    "%autoreload"
    ]
   },
   {
@@ -111,8 +91,8 @@
     }
    },
    "source": [
-    "<img src=\"_static/images/aai-institute-cover.svg\" alt=\"Snow\" style=\"width:100%;\">\n",
-    "<div class=\"md-slide title\">Include title and greeting with divs</div>"
+    "<img src=\"_static/images/aai-institute-cover.svg\" alt=\"presentation first slide\" style=\"width:100%;\">\n",
+    "<div class=\"md-slide title\">Control and Planning</div>"
    ]
   },
   {
@@ -162,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.11.3"
   },
   "rise": {
    "footer": "<img src='_static/images/aai-logo.png' alt='logo' height='50em'>",
@@ -188,7 +168,7 @@
     "width": "315.6px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   },
   "varInspector": {
    "cols": {
