Offline RL - added outline

--- a/notebooks/nb_80_OfflineRL.ipynb
+++ b/notebooks/nb_80_OfflineRL.ipynb
@@ -107,10 +107,86 @@
     }
    },
    "source": [
-    "# Empty NB\n",
+    "# Offline Reinforcement Learning\n",
     "\n",
     "Copy this file and use it as a template for new notebooks."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## What kind of data is used in offline RL?\n",
+    "\n",
+    "- only actions: BC, inverse RL\n",
+    "- perfect trajectories and rewards: modified BC, critic regularized regression, CQL\n",
+    "- imperfect trajectories: want to improve on behavior policy. BQL, IQL"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Typical problems in offline RL\n",
+    "\n",
+    "- Distribution shift -> Show example\n",
+    "- Argmax in learned critic is problematic (like adversarial attack) -> Show example\n",
+    "- Poor behavior policy\n",
+    "- If only actions are collected - what is the reward? Inverse RL is hard and ambiguous\n",
+    "- Poor examples are not collected at all by good policies (driving car off the road), major distribution shift. Solution - something like Dagger, if access to env is possible somehow (show a Dagger example?)\n",
+    "- Standard off-policy algorithms don't work well since errors in critic are not corrected by collecting more samples (compare SAC and AWAC)\n",
+    "- ..."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Why offline RL then?\n",
+    "- Might be no other choice (no access to env)\n",
+    "- Way easier to implement (supervised learning, no sampling loop)\n",
+    "- When no clear reward is given (navigating drones, self-driving cars, robot arms, etc.)\n",
+    "- As a pre-training step before an actual RL algo (AWAC and follow-up papers) -> Show example"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Software for offline RL\n",
+    "- d4rl -> minari\n",
+    "- supervised libraries, but also tianshou"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Examples:\n",
+    "- how to collect data\n",
+    "- mujoco, data collected with experts - CRR, BC.\n",
+    "- mujoco, suboptimal policy - BQL, IQL?\n",
+    "- using d4rl/minari datasets"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## References"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
