Remove unused imports

--- a/notebooks/nb_20_IntroEnvironmentsControl.ipynb
+++ b/notebooks/nb_20_IntroEnvironmentsControl.ipynb
@@ -68,15 +68,12 @@
     "from typing import Optional\n",
     "\n",
     "import control as ct\n",
-    "import estimagic as em\n",
     "import gymnasium as gym\n",
     "import matplotlib.pyplot as plt\n",
     "import mediapy as media\n",
     "import numpy as np\n",
-    "from ipywidgets import interact, Output, widgets\n",
-    "from IPython.display import display, HTML\n",
+    "from ipywidgets import interact, widgets\n",
     "from numpy.typing import NDArray\n",
-    "from scipy.special import expit\n",
     "\n",
     "from training_rl.environment import create_inverted_pendulum_environment\n",
     "\n",
