Add more information to notebook, update environment

--- a/notebooks/nb_20_IntroEnvironmentsControl.ipynb
+++ b/notebooks/nb_20_IntroEnvironmentsControl.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "init_cell": true,
     "slideshow": {
@@ -21,42 +21,247 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "init_cell": true,
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>/*\n",
+       "This file is mainly copy-pasta from rise's examples\n",
+       "https://github.com/damianavila/RISE/blob/master/examples/rise.css\n",
+       "that was further customized for appliedAI purposes\n",
+       "*/\n",
+       "@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400&display=swap');\n",
+       "\n",
+       "\n",
+       "/*\n",
+       "body {\n",
+       "    font-family: 'Work Sans', sans-serif !important;\n",
+       "    text-transform: initial !important;\n",
+       "    letter-spacing: initial !important;\n",
+       "    font-weight: 400 !important;\n",
+       "    line-height: 1.5 !important;\n",
+       "    text-size-adjust: 100% !important;\n",
+       "    ‑webkit‑text‑size‑adjust: 100% !important;\n",
+       "}\n",
+       "\n",
+       "\n",
+       ".reveal, div.text_cell_render, .md-slide, .sidebar-wrapper {\n",
+       "    font-size: 1.5rem !important;\n",
+       "}\n",
+       "*/\n",
+       "\n",
+       ".navbar-default .navbar-nav > li > a {\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       ".filename {\n",
+       "    font-size: 2.4rem !important;\n",
+       "    color: #212529 !important;\n",
+       "    font-weight: 600 !important;\n",
+       "}\n",
+       "\n",
+       ".reveal, .md-slide {\n",
+       "    color: white !important;\n",
+       "}\n",
+       "\n",
+       "h1, h2 {\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       "h3, h4, h5, h6 {\n",
+       "    color: #808080 !important;\n",
+       "}\n",
+       "\n",
+       ".reveal p, .reveal ol, .reveal dl, .reveal ul,\n",
+       "div.text_cell_render {\n",
+       "    color: #212529 !important;\n",
+       "}\n",
+       "\n",
+       "/*copied from stackoverflow, better spacing between list items*/\n",
+       "li + li {\n",
+       "  margin-top: 0.2em;\n",
+       "}\n",
+       "\n",
+       "body.rise-enabled .reveal ol, body.rise-enabled .reveal dl, body.rise-enabled .reveal ul {\n",
+       "    margin-left: 0.1em;\n",
+       "    margin-top: 0.2em;\n",
+       "}\n",
+       "\n",
+       ".reveal .rendered_html h1:first-child,\n",
+       ".reveal .rendered_html h2:first-child,\n",
+       ".reveal .rendered_html h3:first-child,\n",
+       ".reveal .rendered_html h4:first-child,\n",
+       ".reveal .rendered_html h5:first-child {\n",
+       "    margin-top: 0.2em;\n",
+       "}\n",
+       "\n",
+       "/*\n",
+       ".CodeMirror-lines, .output_text {\n",
+       "    font-size: 1.5rem !important;\n",
+       "}\n",
+       "*/\n",
+       "\n",
+       "h1.plan, h2.plan, h3.plan {\n",
+       "    text-align: center;\n",
+       "    padding-bottom: 30px;\n",
+       "}\n",
+       "\n",
+       "ul.plan>li>span.plan-bold {\n",
+       "    font-size: 110%;\n",
+       "    padding: 4px;\n",
+       "    font-weight: bold;\n",
+       "    background-color: #eee;\n",
+       "}\n",
+       "\n",
+       "ul.plan>li>ul.subplan>li>span.plan-bold {\n",
+       "    font-weight: bold;\n",
+       "}\n",
+       "\n",
+       ".plan-strike {\n",
+       "    opacity: 0.4;\n",
+       "/*    text-decoration: line-through; */\n",
+       "}\n",
+       "\n",
+       "div.plan-container {\n",
+       "    display: grid;\n",
+       "    grid-template-columns: 50% 50%;\n",
+       "}\n",
+       "\n",
+       "/*\n",
+       " * this is to void xarray's html output to show the fallback textual representation\n",
+       " * see also\n",
+       "   * xarray.md and\n",
+       "   * https://github.com/damianavila/RISE/issues/594\n",
+       " */\n",
+       ".reveal pre.xr-text-repr-fallback {\n",
+       "    display: none;\n",
+       "}\n",
+       "\n",
+       "#toc-header, .toc-item li {\n",
+       "    margin: auto !important;\n",
+       "    color: #808080 !important;\n",
+       "}\n",
+       "\n",
+       "#toc, #toc-wrapper, .toc-item-num, #toc a, .toc {\n",
+       "    margin: auto !important;\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       "#toc-wrapper {\n",
+       "    top: auto !important;\n",
+       "    bottom: auto !important;\n",
+       "    margin-top: 2rem !important;\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       "\n",
+       "#rise-header {\n",
+       "    margin: 10px;\n",
+       "    left: 5%;\n",
+       "}\n",
+       "\n",
+       "#rise-footer {\n",
+       "    margin: 10px;\n",
+       "    right: 5%;\n",
+       "}\n",
+       "\n",
+       "#rise-backimage {\n",
+       "    opacity: 0.70;\n",
+       "}\n",
+       "\n",
+       ".reveal img {\n",
+       "    max-width: 100%;\n",
+       "}\n",
+       "\n",
+       "\n",
+       ".md-slide.title {\n",
+       "    position: relative;\n",
+       "    top: -50%;\n",
+       "    margin-left: 5%;\n",
+       "    font-size: 4em !important;\n",
+       "    line-height: 1.6;\n",
+       "}\n",
+       "</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%presentation_style"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "init_cell": true,
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "\n",
+       "$\\newcommand{\\vect}[1]{{\\mathbf{\\boldsymbol{#1}} }}$\n",
+       "$\\newcommand{\\amax}{{\\text{argmax}}}$\n",
+       "$\\newcommand{\\P}{{\\mathbb{P}}}$\n",
+       "$\\newcommand{\\E}{{\\mathbb{E}}}$\n",
+       "$\\newcommand{\\R}{{\\mathbb{R}}}$\n",
+       "$\\newcommand{\\Z}{{\\mathbb{Z}}}$\n",
+       "$\\newcommand{\\N}{{\\mathbb{N}}}$\n",
+       "$\\newcommand{\\C}{{\\mathbb{C}}}$\n",
+       "$\\newcommand{\\abs}[1]{{ \\left| #1 \\right| }}$\n",
+       "$\\newcommand{\\simpl}[1]{{\\Delta^{#1} }}$\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%load_latex_macros"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "init_cell": true,
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'training_rl.control'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 17\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msignal\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m find_peaks\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtraining_rl\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01menvironment\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m create_inverted_pendulum_environment, create_mass_spring_damper_environment\n\u001b[0;32m---> 17\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtraining_rl\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcontrol\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m second_order_system_plot\n\u001b[1;32m     19\u001b[0m warnings\u001b[38;5;241m.\u001b[39msimplefilter(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mignore\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;167;01mUserWarning\u001b[39;00m)\n\u001b[1;32m     20\u001b[0m sns\u001b[38;5;241m.\u001b[39mset_theme()\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'training_rl.control'"
+     ]
+    }
+   ],
    "source": [
     "%autoreload\n",
     "import warnings\n",
@@ -74,7 +279,6 @@
     "from scipy.signal import find_peaks\n",
     "\n",
     "from training_rl.environment import create_inverted_pendulum_environment, create_mass_spring_damper_environment\n",
-    "from training_rl.control import second_order_system_plot\n",
     "\n",
     "warnings.simplefilter(\"ignore\", UserWarning)\n",
     "sns.set_theme()\n",
@@ -114,6 +318,21 @@
     }
    },
    "source": [
+    "There are few different branches of Control Theory:\n",
+    "\n",
+    "- **Optimal Control**: deals with finding a control for a dynamical system over a period of time such that an objective function is optimized.\n",
+    "- **Adaptive Control**: adapt to a controlled system with parameters which vary, or are initially uncertain.\n",
+    "- **Robust Control**: an approach to controller design that explicitly deals with uncertainty."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "The central problem in control is to find a technically feasible way to act on a\n",
     "given process so that the process behaves, as closely as possible, to some desired\n",
     "behavior. Furthermore, this approximate behavior should be achieved in the face of\n",
@@ -126,7 +345,17 @@
     "- **Uncertainty** The available knowledge about a system will usually be limited\n",
     "  and of limited accuracy.\n",
     "- **Action** The solution requires that action be somehow applied to the process\n",
-    "  typically via one or more manipulated variables which command the actuators.\n",
+    "  typically via one or more manipulated variables which command the actuators."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "- **Disturbances** The process to be controlled will typically have inputs other\n",
     "  than those that are manipulated by the controller. These other inputs are\n",
     "  called disturbances.\n",
@@ -134,6 +363,35 @@
     "  will invariably be a degree of approximation in achieving the specified goal.\n",
     "- **Measurements** These are crucial to let the controller know what the system\n",
     "  is actually doing and how the unavoidable disturbances are affecting it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "\n",
+    "</div>\n",
+    "<div style=\"float: left; width: 50%;\">\n",
+    "    <figure>\n",
+    "        <img src=\"_static/images/20_feedback_block_diagram.svg\" width=\"100%\"/>\n",
+    "        <figcaption>\n",
+    "            Feedback Control in Control Engineering\n",
+    "        </figcaption>\n",
+    "    </figure>\n",
+    "</div>\n",
+    "<div style=\"float: right; width: 45%;\">\n",
+    "    <figure>\n",
+    "        <img src=\"_static/images/20_reinforcement_learning_block_diagram.svg\" width=\"100%\"/>\n",
+    "        <figcaption>\n",
+    "            Feedback Control in Reinforcement Learning\n",
+    "        </figcaption>\n",
+    "    </figure>\n",
+    "</div>\n",
+    "</div>"
    ]
   },
   {
@@ -751,6 +1009,29 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Notation\n",
+    "\n",
+    "- Time:\n",
+    "  - Continuous-time: $t \\in \\mathbb{R}$\n",
+    "  - Discrete-time: $t \\in \\mathbb{N}$\n",
+    "- State: $x(t) \\in \\mathbb{R}^n$\n",
+    "- Control input: $u(t) \\in \\mathbb{R}^m$\n",
+    "- Dynamics\n",
+    "  - Continuous-time: $\\dot{x}(t) = f(x(t), u(t), t)$\n",
+    "  - Discrete-time: $x_{t+1} = f(x_t, u_t, t)$\n",
+    "- Trajectories:\n",
+    "  - $x: t \\rightarrow x(t)$\n",
+    "  - $u: t \\rightarrow u(t)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -1137,11 +1418,11 @@
     "\n",
     "$$\n",
     "\\ddot{y} = \\frac{1}{\\lambda_m + \\sin^2\\theta(t)} \\left[\n",
-    "\\frac{f(t)}{m} + \\dot{\\theta}^2 l \\sin\\theta(t) - g \\cos\\theta(t) \\sin\\theta(t)\n",
+    "\\frac{f(t)}{m} + \\dot{\\theta}(t)^2 l \\sin\\theta(t) - g \\cos\\theta(t) \\sin\\theta(t)\n",
     "\\right]\n",
     "\\\\\n",
     "\\ddot{\\theta} = \\frac{1}{l\\lambda_m + \\sin^2\\theta(t)} \\left[\n",
-    "-\\frac{f(t)}{m}\\cos\\theta(t) + \\dot{\\theta}^2 l \\sin\\theta(t) \\cos\\theta(t) + (1 - \\lambda_m) \\sin\\theta(t)\n",
+    "-\\frac{f(t)}{m}\\cos\\theta(t) + \\dot{\\theta}(t)^2 l \\sin\\theta(t) \\cos\\theta(t) + (1 - \\lambda_m) \\sin\\theta(t)\n",
     "\\right]\n",
     "$$\n",
     "\n",
@@ -1903,6 +2184,31 @@
     "    $$\n",
     "    ||y(t)||_\\infty \\lt \\infty\n",
     "    $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "- **Marginal/Lyapunov** $\\forall \\epsilon > 0, \\exists \\delta > 0 : ||x(0) - x_{\\text{eq}}|| < \\delta \\implies ||x(t) - x_{\\text{eq}}|| < \\epsilon, \\forall t \\gt 0$\n",
+    "  \n",
+    "  Trajectories that start close to the equilibrium remain close to the equilibrium.\n",
+    "  \n",
+    "- **Asymptotic (local)** $\\exists \\delta > 0 : ||x(0) - x_{\\text{eq}}|| < \\delta \\implies \\lim_{\\rightarrow \\infty} ||x(t) - x_{\\text{eq}}|| = 0$\n",
+    "\n",
+    "  Trajectories that start near the equilibrium converge to it.\n",
+    "\n",
+    "- **Exponential (local)** $\\exists \\delta, c, \\alpha > 0 : ||x(0) − x_{\\text{eq}}|| < \\delta \\implies ||x(t) - x_{\\text{eq}}|| \\lt c\\exp^{−\\alpha t} || x(0) - x_{\\text{eq}}||$\n",
+    "\n",
+    "  Trajectories that start near the equilibrium converge to it exponentially fast.\n",
+    "  \n",
+    "> *Note 1*: The global definitions can be obtained by taking $\\delta \\rightarrow \\infty$.\n",
+    "\n",
+    "> *Note 2* For linear time-invariant (LTI) systems, \"asymptotic = exponential\" and \"local = global\" always."
    ]
   },
   {
