Format control intro notebook

--- a/notebooks/nb_20_IntroEnvironmentsControl.ipynb
+++ b/notebooks/nb_20_IntroEnvironmentsControl.ipynb
@@ -365,7 +365,7 @@
    },
    "outputs": [],
    "source": [
-    "media.show_videos(all_frames, fps=1/env.dt)"
+    "media.show_videos(all_frames, fps=1 / env.dt)"
    ]
   },
   {
@@ -545,7 +545,7 @@
    },
    "outputs": [],
    "source": [
-    "media.show_videos(all_frames, fps=1/env.dt)"
+    "media.show_videos(all_frames, fps=1 / env.dt)"
    ]
   },
   {
@@ -575,17 +575,19 @@
     "    def control(self, observation: NDArray) -> NDArray:\n",
     "        ...\n",
     "\n",
+    "\n",
     "class ConstantController:\n",
     "    def __init__(self, u: NDArray = np.zeros(1)) -> None:\n",
     "        self.u = u\n",
-    "        \n",
+    "\n",
     "    def act(self, observation: NDArray) -> NDArray:\n",
     "        return self.u\n",
-    "        \n",
+    "\n",
+    "\n",
     "class RandomController:\n",
     "    def __init__(self, env: Env) -> None:\n",
     "        self.action_space = env.action_space\n",
-    "    \n",
+    "\n",
     "    def act(self, observation: NDArray) -> NDArray:\n",
     "        return self.action_space.sample()"
    ]
@@ -618,10 +620,7 @@
    "outputs": [],
    "source": [
     "def simulate_environment(\n",
-    "    env: Env,\n",
-    "    *,\n",
-    "    max_steps: int = 500,\n",
-    "    controller: FeedbackController | None = None\n",
+    "    env: Env, *, max_steps: int = 500, controller: FeedbackController | None = None\n",
     ") -> SimulationResults:\n",
     "    if controller is None:\n",
     "        controller = RandomController(env)\n",
@@ -638,7 +637,7 @@
     "        if terminated or truncated:\n",
     "            frames = env.render()\n",
     "            env.reset()\n",
-    "            break    \n",
+    "            break\n",
     "    env.close()\n",
     "    return SimulationResults(frames, np.stack(observations), np.stack(actions))"
    ]
@@ -655,7 +654,7 @@
    "source": [
     "env = create_mass_spring_damper_environment()\n",
     "results = simulate_environment(env)\n",
-    "media.show_video(results.frames, fps=1/env.dt)"
+    "media.show_video(results.frames, fps=1 / env.dt)"
    ]
   },
   {
@@ -736,7 +735,7 @@
     "class ProportionalController:\n",
     "    def __init__(self, K: float = 1.0) -> None:\n",
     "        self.K = K\n",
-    "        \n",
+    "\n",
     "    def act(self, measurement: NDArray) -> NDArray:\n",
     "        theta = measurement[[1]]\n",
     "        return self.K * theta"
@@ -754,11 +753,13 @@
    },
    "outputs": [],
    "source": [
-    "def control_inverted_pendulum(K = widgets.FloatSlider(min=0.0, max=100.0, step=1, value=1.0)):\n",
+    "def control_inverted_pendulum(K=widgets.FloatSlider(min=0.0, max=100.0, step=1, value=1.0)):\n",
     "    env = create_inverted_pendulum_environment()\n",
     "    controller = ProportionalController(K)\n",
     "    results = simulate_environment(env, max_steps=300, controller=controller)\n",
-    "    media.show_video(results.frames, fps=1/env.dt)\n",
+    "    media.show_video(results.frames, fps=1 / env.dt)\n",
+    "\n",
+    "\n",
     "interact(control_inverted_pendulum);"
    ]
   },
@@ -1696,7 +1697,7 @@
     "    def __init__(self, t_threshold: int = 50) -> None:\n",
     "        self.t = 0\n",
     "        self.t_threshold = t_threshold\n",
-    "    \n",
+    "\n",
     "    def act(self, observation: NDArray) -> NDArray:\n",
     "        self.t += 1\n",
     "        if self.t < self.t_threshold:\n",
@@ -1762,7 +1763,7 @@
     "A1 = ymax - yf\n",
     "indices, _ = find_peaks(observations[:, 0])\n",
     "peaks = observations[indices, 0]\n",
-    "peaks = peaks[peaks > 1.05*yf]\n",
+    "peaks = peaks[peaks > 1.05 * yf]\n",
     "n = len(peaks)\n",
     "An = peaks[-1] - yf\n",
     "Tw = np.diff(indices)[-1].item() * env.dt"
@@ -1779,9 +1780,9 @@
    },
    "outputs": [],
    "source": [
-    "K = (yf - y0)/(uf - u0)\n",
+    "K = (yf - y0) / (uf - u0)\n",
     "K = K.item()\n",
-    "dr = (An / A1)**(1/(n-1))\n",
+    "dr = (An / A1) ** (1 / (n - 1))\n",
     "zeta = -np.log(dr) / np.sqrt(4 * np.pi**2 + np.log(dr) ** 2)\n",
     "Tn = Tw * np.sqrt(1 - zeta**2) / (2 * np.pi)\n",
     "print(f\"{K=:.3f}, {dr=:.3f}, {zeta=:.3f}, {Tn=:.3f}\")"
@@ -1798,7 +1799,7 @@
    },
    "outputs": [],
    "source": [
-    "tf = ct.tf(1, [Tn**2/K, 2*zeta*Tn/K, 1/K])\n",
+    "tf = ct.tf(1, [Tn**2 / K, 2 * zeta * Tn / K, 1 / K])\n",
     "tf"
    ]
   },
@@ -1830,7 +1831,7 @@
    "outputs": [],
    "source": [
     "m = Tn**2 / K\n",
-    "c = 2*zeta*Tn / K\n",
+    "c = 2 * zeta * Tn / K\n",
     "k = 1 / K\n",
     "print(f\"{m=}, {c=}, {k=}\")"
    ]
@@ -1849,19 +1850,20 @@
     "msd_params = MassSpringDamperParameters(m=m, c=c, k=k)\n",
     "\n",
     "# Dynamics matrix\n",
-    "A = np.array([\n",
-    "    [0, 1],\n",
-    "    [-msd_params.k/msd_params.m, -msd_params.c/msd_params.m],\n",
-    "])\n",
+    "A = np.array(\n",
+    "    [\n",
+    "        [0, 1],\n",
+    "        [-msd_params.k / msd_params.m, -msd_params.c / msd_params.m],\n",
+    "    ]\n",
+    ")\n",
     "# Input matrix\n",
-    "B = np.array([[\n",
-    "    0,\n",
-    "    1/msd_params.m\n",
-    "]]).transpose()\n",
+    "B = np.array([[0, 1 / msd_params.m]]).transpose()\n",
     "# Output matrices\n",
-    "C = np.array([\n",
-    "    [1, 0],\n",
-    "])\n",
+    "C = np.array(\n",
+    "    [\n",
+    "        [1, 0],\n",
+    "    ]\n",
+    ")\n",
     "D = np.zeros(1)"
    ]
   },
@@ -1907,7 +1909,7 @@
    "outputs": [],
    "source": [
     "dt = env.dt\n",
-    "T = np.arange(0, len(observations)*dt, dt)[:-1]\n",
+    "T = np.arange(0, len(observations) * dt, dt)[:-1]\n",
     "U = actions.transpose()\n",
     "X0 = np.zeros(2)\n",
     "response = ct.input_output_response(mass_spring_damper, T, U, X0)"
@@ -2001,19 +2003,20 @@
    "outputs": [],
    "source": [
     "# Dynamics matrix\n",
-    "A = np.array([\n",
-    "    [ 0, 1],\n",
-    "    [(1+lambda_m)*ip_params.g/(lambda_m*ip_params.l), 0],\n",
-    "])\n",
+    "A = np.array(\n",
+    "    [\n",
+    "        [0, 1],\n",
+    "        [(1 + lambda_m) * ip_params.g / (lambda_m * ip_params.l), 0],\n",
+    "    ]\n",
+    ")\n",
     "# Input matrix\n",
-    "B = np.array([[\n",
-    "    0,\n",
-    "    -1/(ip_params.M*ip_params.l)\n",
-    "]]).transpose()\n",
+    "B = np.array([[0, -1 / (ip_params.M * ip_params.l)]]).transpose()\n",
     "# Output matrices\n",
-    "C = np.array([\n",
-    "    [1, 0],\n",
-    "])\n",
+    "C = np.array(\n",
+    "    [\n",
+    "        [1, 0],\n",
+    "    ]\n",
+    ")\n",
     "D = np.zeros(1)"
    ]
   },
@@ -2646,7 +2649,7 @@
    "outputs": [],
    "source": [
     "dt = env.dt\n",
-    "T = np.arange(0, len(observations)*dt - dt, dt)\n",
+    "T = np.arange(0, len(observations) * dt - dt, dt)\n",
     "U = np.concatenate([observations[1:, [1]], actions], axis=1).transpose()\n",
     "X0 = observations[1, :]\n",
     "estimator_response = ct.input_output_response(mass_spring_damper_estimator, T, U, X0)"
@@ -2662,7 +2665,9 @@
    },
    "outputs": [],
    "source": [
-    "plot_estimator_response(estimator_response, labels=[\"Position\", \"Velocity\"], observations=observations)"
+    "plot_estimator_response(\n",
+    "    estimator_response, labels=[\"Position\", \"Velocity\"], observations=observations\n",
+    ")"
    ]
   },
   {
@@ -2680,7 +2685,10 @@
     "U_predict = np.outer(U[:, -1], np.ones_like(T_predict))\n",
     "U = np.concatenate([U, U_predict], axis=1)\n",
     "predicted_response = ct.input_output_response(\n",
-    "    mass_spring_damper_estimator, T, U, X0,\n",
+    "    mass_spring_damper_estimator,\n",
+    "    T,\n",
+    "    U,\n",
+    "    X0,\n",
     ")"
    ]
   },
@@ -2690,7 +2698,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_estimator_response(predicted_response, labels=[\"Position\", \"Velocity\"], observations=observations)"
+    "plot_estimator_response(\n",
+    "    predicted_response, labels=[\"Position\", \"Velocity\"], observations=observations\n",
+    ")"
    ]
   },
   {
@@ -2803,7 +2813,7 @@
    "outputs": [],
    "source": [
     "dt = env.dt\n",
-    "T = np.arange(0, len(observations)*dt - dt, dt)\n",
+    "T = np.arange(0, len(observations) * dt - dt, dt)\n",
     "U = np.concatenate([observations[1:, [1]], actions], axis=1).transpose()\n",
     "X0 = np.zeros(2)\n",
     "estimator_response = ct.input_output_response(inverted_pendulum_estimator, T, U, X0)"
@@ -2820,7 +2830,9 @@
    },
    "outputs": [],
    "source": [
-    "plot_estimator_response(estimator_response, labels=[\"Angle\", \"Angular Velocity\"], observations=observations[:, [1, 3]])"
+    "plot_estimator_response(\n",
+    "    estimator_response, labels=[\"Angle\", \"Angular Velocity\"], observations=observations[:, [1, 3]]\n",
+    ")"
    ]
   },
   {
@@ -2851,7 +2863,10 @@
     "U_predict = np.outer(U[:, -1], np.ones_like(T_predict))\n",
     "U = np.concatenate([U, U_predict], axis=1)\n",
     "predicted_response = ct.input_output_response(\n",
-    "    inverted_pendulum_estimator, T, U, X0,\n",
+    "    inverted_pendulum_estimator,\n",
+    "    T,\n",
+    "    U,\n",
+    "    X0,\n",
     ")"
    ]
   },
@@ -2866,7 +2881,9 @@
    },
    "outputs": [],
    "source": [
-    "plot_estimator_response(predicted_response, labels=[\"Angle\", \"Angular Velocity\"], observations=observations[:, [1, 3]])"
+    "plot_estimator_response(\n",
+    "    predicted_response, labels=[\"Angle\", \"Angular Velocity\"], observations=observations[:, [1, 3]]\n",
+    ")"
    ]
   },
   {
@@ -3097,11 +3114,13 @@
     "    force = r - K @ x\n",
     "    return force\n",
     "\n",
+    "\n",
     "fsfbk_controller = ct.NonlinearIOSystem(\n",
-    "    None, fsfbk_output,\n",
+    "    None,\n",
+    "    fsfbk_output,\n",
     "    name=\"controller\",\n",
-    "    inputs=('xhat[0]', 'xhat[1]', 'r'),\n",
-    "    outputs=('u[0]'),\n",
+    "    inputs=(\"xhat[0]\", \"xhat[1]\", \"r\"),\n",
+    "    outputs=(\"u[0]\"),\n",
     ")\n",
     "print(fsfbk_controller)"
    ]
@@ -3136,9 +3155,7 @@
     "x0 = np.zeros(closed_loop.nstates)\n",
     "# reference\n",
     "r = 0.1\n",
-    "response = ct.input_output_response(\n",
-    "    closed_loop, T, r, x0, params={\"K\": K}\n",
-    ")"
+    "response = ct.input_output_response(closed_loop, T, r, x0, params={\"K\": K})"
    ]
   },
   {
@@ -3179,7 +3196,7 @@
     "    def __init__(self, K: NDArray, reference: float) -> None:\n",
     "        self.K = K\n",
     "        self.reference = reference\n",
-    "    \n",
+    "\n",
     "    def act(self, observation: NDArray) -> NDArray:\n",
     "        return self.reference - self.K @ observation"
    ]
@@ -3212,7 +3229,7 @@
    },
    "outputs": [],
    "source": [
-    "media.show_video(results.frames, fps=1/env.dt)"
+    "media.show_video(results.frames, fps=1 / env.dt)"
    ]
   },
   {
@@ -3302,11 +3319,13 @@
     "    force = r - K @ x\n",
     "    return force\n",
     "\n",
+    "\n",
     "fsfbk_controller = ct.NonlinearIOSystem(\n",
-    "    None, fsfbk_output,\n",
+    "    None,\n",
+    "    fsfbk_output,\n",
     "    name=\"controller\",\n",
-    "    inputs=('xhat[0]', 'xhat[1]', 'r'),\n",
-    "    outputs=('u[0]'),\n",
+    "    inputs=(\"xhat[0]\", \"xhat[1]\", \"r\"),\n",
+    "    outputs=(\"u[0]\"),\n",
     ")\n",
     "print(fsfbk_controller)"
    ]
@@ -3349,9 +3368,7 @@
     "x0[0] = 0.1\n",
     "# reference\n",
     "r = 0.0\n",
-    "response = ct.input_output_response(\n",
-    "    closed_loop, T, r, x0, params={\"K\": K}\n",
-    ")"
+    "response = ct.input_output_response(closed_loop, T, r, x0, params={\"K\": K})"
    ]
   },
   {
@@ -3395,7 +3412,7 @@
     "    def __init__(self, K: NDArray, reference: float) -> None:\n",
     "        self.K = K\n",
     "        self.reference = reference\n",
-    "    \n",
+    "\n",
     "    def act(self, observation: NDArray) -> NDArray:\n",
     "        return self.reference - self.K @ observation[[1, 3]]"
    ]
@@ -3430,7 +3447,7 @@
    },
    "outputs": [],
    "source": [
-    "media.show_video(results.frames, fps=1/env.dt)"
+    "media.show_video(results.frames, fps=1 / env.dt)"
    ]
   },
   {
@@ -3511,16 +3528,18 @@
     "env = create_mass_spring_damper_environment()\n",
     "dt = env.dt\n",
     "\n",
-    "def pid_controler_update(t: float, x: NDArray, u: NDArray, params: dict):        \n",
+    "\n",
+    "def pid_controler_update(t: float, x: NDArray, u: NDArray, params: dict):\n",
     "    e = u[0]\n",
     "    e_i = x[1] + e\n",
     "    e_d = e - x[0]\n",
     "    return np.array([e, e_i, e_d])\n",
     "\n",
+    "\n",
     "def pid_controler_output(t: float, x: NDArray, u: NDArray, params: dict):\n",
-    "    Kp = params.get('Kp', 1.0)\n",
-    "    Ki = params.get('Ki', 0)\n",
-    "    Kd = params.get('Kd', 0)\n",
+    "    Kp = params.get(\"Kp\", 1.0)\n",
+    "    Ki = params.get(\"Ki\", 0)\n",
+    "    Kd = params.get(\"Kd\", 0)\n",
     "    out = np.array([Kp * x[0] + Ki * x[1] * dt + Kd * x[2] / dt])\n",
     "    return out\n",
     "\n",
@@ -3529,9 +3548,9 @@
     "    pid_controler_update,\n",
     "    pid_controler_output,\n",
     "    name=\"pid\",\n",
-    "    inputs=('e[0]'),\n",
+    "    inputs=(\"e[0]\"),\n",
     "    states=(\"x[0]\", \"x[1]\", \"x[2]\"),\n",
-    "    outputs=('u[0]'),\n",
+    "    outputs=(\"u[0]\"),\n",
     ")\n",
     "print(pid_controller)"
    ]
@@ -3563,21 +3582,22 @@
    "outputs": [],
    "source": [
     "def tune_pid_mass_spring_damper(\n",
-    "    Kp = widgets.FloatSlider(min=0.0, max=100.0, step=1, value=1.0),\n",
-    "    Ki = widgets.FloatSlider(min=0.0, max=10.0, step=0.1, value=0.0),\n",
-    "    Kd = widgets.FloatSlider(min=0.0, max=10.0, step=0.1, value=0.0),\n",
-    "    reference = widgets.FloatSlider(min=-0.5, max=0.5, step=.05, value=0.1),\n",
+    "    Kp=widgets.FloatSlider(min=0.0, max=100.0, step=1, value=1.0),\n",
+    "    Ki=widgets.FloatSlider(min=0.0, max=10.0, step=0.1, value=0.0),\n",
+    "    Kd=widgets.FloatSlider(min=0.0, max=10.0, step=0.1, value=0.0),\n",
+    "    reference=widgets.FloatSlider(min=-0.5, max=0.5, step=0.05, value=0.1),\n",
     "):\n",
     "    n_steps = 500\n",
     "    T = np.arange(0, n_steps) * dt\n",
     "    x0 = np.zeros(2)\n",
     "    u0 = reference\n",
     "    params = {\"Kp\": Kp, \"Ki\": Ki, \"Kd\": Kd}\n",
-    "    response = ct.input_output_response(\n",
-    "        closed_loop, T, u0, x0, params=params\n",
+    "    response = ct.input_output_response(closed_loop, T, u0, x0, params=params)\n",
+    "\n",
+    "    plot_mass_spring_damper_results(\n",
+    "        T, reference, response.outputs[[0]].transpose(), response.outputs[1, 1:]\n",
     "    )\n",
-    "    \n",
-    "    plot_mass_spring_damper_results(T, reference, response.outputs[[0]].transpose(), response.outputs[1, 1:])\n",
+    "\n",
     "\n",
     "interact(tune_pid_mass_spring_damper);"
    ]
@@ -3625,13 +3645,17 @@
     "        self.dt = dt\n",
     "        self.accumulated_error = 0.0\n",
     "        self.previous_error = 0.0\n",
-    "    \n",
+    "\n",
     "    def act(self, observation: NDArray) -> NDArray:\n",
     "        error = self.reference - observation[0]\n",
     "        self.accumulated_error += error\n",
     "        error_difference = error - self.previous_error\n",
     "        self.previous_error = error\n",
-    "        force = self.Kp * error + self.Ki * self.accumulated_error * self.dt + self.Kd * error_difference / self.dt\n",
+    "        force = (\n",
+    "            self.Kp * error\n",
+    "            + self.Ki * self.accumulated_error * self.dt\n",
+    "            + self.Kd * error_difference / self.dt\n",
+    "        )\n",
     "        return np.array([force])"
    ]
   },
@@ -3664,7 +3688,7 @@
    },
    "outputs": [],
    "source": [
-    "media.show_video(results.frames, fps=1/env.dt)"
+    "media.show_video(results.frames, fps=1 / env.dt)"
    ]
   },
   {
@@ -3733,25 +3757,28 @@
     "env = create_inverted_pendulum_environment()\n",
     "dt = env.dt\n",
     "\n",
-    "def pid_controler_update(t: float, x: NDArray, u: NDArray, params: dict):        \n",
+    "\n",
+    "def pid_controler_update(t: float, x: NDArray, u: NDArray, params: dict):\n",
     "    e = u[0]\n",
     "    e_i = x[1] + e\n",
     "    e_d = e - x[0]\n",
     "    return np.array([e, e_i, e_d])\n",
     "\n",
+    "\n",
     "def pid_controler_output(t: float, x: NDArray, u: NDArray, params: dict):\n",
-    "    Kp = params.get('Kp', 1.0)\n",
-    "    Ki = params.get('Ki', 0)\n",
-    "    Kd = params.get('Kd', 0)\n",
+    "    Kp = params.get(\"Kp\", 1.0)\n",
+    "    Ki = params.get(\"Ki\", 0)\n",
+    "    Kd = params.get(\"Kd\", 0)\n",
     "    return np.array([Kp * x[0] + Ki * x[1] * dt + Kd * x[2] / dt])\n",
+    "\n",
     "\n",
     "pid_controller = ct.NonlinearIOSystem(\n",
     "    pid_controler_update,\n",
     "    pid_controler_output,\n",
     "    name=\"pid\",\n",
-    "    inputs=('y[0]'),\n",
+    "    inputs=(\"y[0]\"),\n",
     "    states=(\"e[0]\", \"e[1]\", \"e[2]\"),\n",
-    "    outputs=('u[0]'),\n",
+    "    outputs=(\"u[0]\"),\n",
     "    dt=inverted_pendulum.dt,\n",
     ")\n",
     "print(pid_controller)"
@@ -3790,9 +3817,9 @@
    "outputs": [],
    "source": [
     "def tune_pid_inverted_pendulum(\n",
-    "    Kp = widgets.FloatSlider(min=0.0, max=2000.0, step=10, value=10.0),\n",
-    "    Ki = widgets.FloatSlider(min=0.0, max=100.0, step=10, value=0.0),\n",
-    "    Kd = widgets.FloatSlider(min=0.0, max=100.0, step=10, value=0.0),\n",
+    "    Kp=widgets.FloatSlider(min=0.0, max=2000.0, step=10, value=10.0),\n",
+    "    Ki=widgets.FloatSlider(min=0.0, max=100.0, step=10, value=0.0),\n",
+    "    Kd=widgets.FloatSlider(min=0.0, max=100.0, step=10, value=0.0),\n",
     "):\n",
     "    n_steps = 500\n",
     "    T = np.arange(0, n_steps) * dt\n",
@@ -3800,10 +3827,9 @@
     "    x0[0] = 0.01\n",
     "    u0 = 0.0\n",
     "    params = {\"Kp\": Kp, \"Ki\": Ki, \"Kd\": Kd}\n",
-    "    response = ct.input_output_response(\n",
-    "        closed_loop, T, u0, x0, params=params\n",
-    "    )\n",
+    "    response = ct.input_output_response(closed_loop, T, u0, x0, params=params)\n",
     "    plot_inverted_pendulum_results(T, r, response.outputs[[0]].transpose(), response.outputs[1, 1:])\n",
+    "\n",
     "\n",
     "interact(tune_pid_inverted_pendulum);"
    ]
@@ -3865,7 +3891,7 @@
    },
    "outputs": [],
    "source": [
-    "media.show_video(results.frames, fps=1/env.dt)"
+    "media.show_video(results.frames, fps=1 / env.dt)"
    ]
   },
   {
